--- a/index.html
+++ b/index.html
@@ -47,16 +47,16 @@
         button:hover {
             background: #FFC107;
         }
-        .support {
+        .support, .footer-links {
             margin-top: 15px;
             font-size: 14px;
         }
-        .support a {
+        .support a, .footer-links a {
             color: #00BFFF;
             text-decoration: none;
             font-weight: bold;
         }
-        .support a:hover {
+        .support a:hover, .footer-links a:hover {
             text-decoration: underline;
         }
     </style>
@@ -75,6 +75,13 @@
             <button type="button" id="pay-btn">⚡ Pay Now</button>
         </form>
         <p class="support">For support, contact us on <a href="https://wa.me/yourwhatsapp">WhatsApp</a>.</p>
+        <p class="footer-links">
+            <a href="privacy-policy.html">Privacy Policy</a> | 
+            <a href="terms-conditions.html">Terms and Conditions</a> | 
+            <a href="cancellation-refund.html">Cancellation and Refund</a> | 
+            <a href="shipping-delivery.html">Shipping and Delivery</a> | 
+            <a href="contact.html">Contact Us</a>
+        </p>
     </div>
     <script>
         document.getElementById("pay-btn").addEventListener("click", function(event) {
