--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                 "9288": "10500"
             };
             let amount = amountMap[selectedDiamonds];
-            let upiVpa = "jlsamanpaul@oksbi"; // Replace with your own UPI VPA
+            let upiVpa = "6370294756@ybl"; // Replace with your own UPI VPA
             let transactionNote = "MLBB Diamonds";
             let paymentUrl = `upi://pay?pa=${upiVpa}&pn=Pheonix%20Gaming%20Store&mc=123456&tid=1234&tr=xyz123&tn=${transactionNote}&am=${amount}&cu=INR`;
 
