--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
             document.getElementById("paymentPage").style.display = "block";
 
             // Send payment details to backend after payment confirmation
-            fetch('https://your-app-name.herokuapp.com/payment-success', {
+            fetch('https://blooming-reef-41493.herokuapp.com/payment-success', {
     method: 'POST',
     headers: {
         'Content-Type': 'application/json'
