--- a/index.html
+++ b/index.html
@@ -127,6 +127,14 @@
             </select>
             <button type="button" id="pay-btn">⚡ Pay Now</button>
         </form>
+        <p class="support">For support, contact us on <a href="https://wa.me/yourwhatsapp">WhatsApp</a>.</p>
+        <p class="footer-links">
+            <a href="privacy-policy.html">Privacy Policy</a> | 
+            <a href="terms-conditions.html">Terms and Conditions</a> | 
+            <a href="cancellation-refund.html">Cancellation and Refund</a> | 
+            <a href="shipping-delivery.html">Shipping and Delivery</a> | 
+            <a href="contact.html">Contact Us</a>
+        </p>
     </div>
 
     <!-- Payment Section -->
